--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>made by baechu</title>
-<meta HTTP-EQUIV="REFRESH" content="0; url=https://www.youtube.com/watch?v=dQw4w9WgXcQ&feature=youtu.be">
+<meta HTTP-EQUIV="REFRESH" content="0; url=https://www.youtube.com/watch?v=0MnfI7IvQ0U">
 </head>
 <body>
 <center>
