--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
 </head>
 <body>
 <center>
-<h1>기다려주세요.. (made by baechu)</h1>
-  <span>십랄련아</span>
+<h1>please wait</h1>
 </center>
 </body>
 </html>
