--- a/index.html
+++ b/index.html
@@ -1,11 +1,1 @@
-<html>
-<head>
-<title>made by baechu</title>
-<meta HTTP-EQUIV="REFRESH" content="0; url=https://www.youtube.com/watch?v=0MnfI7IvQ0U">
-</head>
-<body>
-<center>
-<h1>please wait</h1>
-</center>
-</body>
-</html>
+<iframe width="1280" height="720" src="https://www.youtube.com/embed/0MnfI7IvQ0U" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
