--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
-<iframe width="1280" height="720" src="https://www.youtube.com/embed/0MnfI7IvQ0U" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<html>
+
+    <meta http-equiv="refresh" content="0; url=https://www.youtube.com/watch?v=0MnfI7IvQ0U/"></meta>
+
+</html>
