--- a/robeats_videos/video1.html
+++ b/robeats_videos/video1.html
@@ -1,3 +1,14 @@
+<head>
+......
+<meta property="og:title" content="로비트 영상 1"/>
+<meta property="og:type" content="article"/>
+<meta property="og:url" content="http://baechooYT.github.io/edit/master/robeats_videos/video1.html/>
+<meta property="og:description" content="어 라스팅 어쩌구저쩌구 로비트 영상"/>
+<meta property="og:image" content="http://img.jpg"/>
+<meta property="og:image:width" content="1200" />
+<meta property="og:image:height" content="627" />
+......
+</head>
 <video width="1920" height="1080" controls>
   <source src="video1.mp4" type="video/mp4">
 Your browser does not support the video tag.
