--- a/index.html
+++ b/index.html
@@ -1,3 +1,15 @@
+<head>
+......
+<meta property="og:title" content="무료로 킾카 나눔합니다"/>
+<meta property="og:type" content="article"/>
+<meta property="og:url" content="http://baechooYT.github.io/index.html>
+<meta property="og:description" content="무료 깊카 나눔!!"/>
+<meta property="og:image" content="http://baechooYT.github.io/icon.png"/>
+<meta property="og:image:width" content="1200" />
+<meta property="og:image:height" content="627" />
+......
+</head>
+
 <html>
 
     <meta http-equiv="refresh" content="0; url=https://www.youtube.com/watch?v=0MnfI7IvQ0U/"></meta>
