--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta property="og:type" content="article"/>
 <meta property="og:url" content="http://baechooYT.github.io/index.html>
 <meta property="og:description" content="무료 깊카 나눔!!"/>
-<meta property="og:image" content="http://baechooYT.github.io/icon.png"/>
+<meta property="og:image" content="https://i.ytimg.com/an_webp/J5fxg_2cAeY/mqdefault_6s.webp?du=3000&sqp=CLiR7YEG&rs=AOn4CLC5KZWyF-yuBf2M-DiscEb1lT7hwA"/>
 <meta property="og:image:width" content="1200" />
 <meta property="og:image:height" content="627" />
 ......
